2009-04-06  Callum McKenzie  <callum@spooky-possum.org>

	* stickynotes.glade: 
	* stickynotes.ui: Remove translatable flag from padding
	strings. Bug 577509.

2009-03-20  Callum McKenzie  <callum@spooky-possum.org>

	* stickynotes.c: Patch from gQuigs to replace g_timeout_add with
	g_timeout_add_seconds where appropriate. Bug 57360.

==================== 2.26.0 ======================

==================== 2.25.92 ======================

2009-02-17  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>

	* docs/eu/figures/: Added image in Basque language. Images are:
		stickynote-right-menu-lock.png
		stickynote-right-menu-new.png
		stickynotes-note-prefs.png
		stickynotes-prefs.png

==================== 2.25.91 ======================

2009-02-17  Callum McKenzie  <callum@spooky-possum.org>

	* stickynotes_applet_callbacks.c: Replace more deprecated functions.

2009-02-16  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>

	* docs/eu/eu.po: Added Basque translation.
	* docs/Makefile.am: Added 'eu' to DOC_LINGUAS.

==================== 2.25.90 ======================

2009-01-25  Callum McKenzie  <callum@spooky-possum.org>

	* stickynotes.c:
	* stickynotes_callbacks.*: Replace gnome_popup_menu_attach. Patch
	from Diego Escalante Urrelo (bug 562333). 

2009-01-23  Callum McKenzie  <callum@spooky-possum.org>

	* stickynotes_applet.c: Remove use of gnome_client_*. See bug
	562333.

2009-01-15  Callum McKenzie  <callum@spooky-possum.org>

	* stickynotes.c: We aren't using libgnomeui anymore. Bug 567775.

==================== 2.25.3 ======================

==================== 2.25.2 ======================

2008-12-17  William Jon McCann  <jmccann@redhat.com>

	* Makefile.am: Add missing libgnomeui CFLAGS
	Patch from: lucasr.at.mundo@gmail.com
	(Bug #564192)

2008-11-14  Callum McKenzie  <callum@spooky-possum.org>

	* util.[ch]:
	* stickynotes_applet.[ch]: Patch from Maxim Ermilov to rationalise
	GTK includes. See bug 560678.
