@@ -731,13 +731,20 @@ This cannot be undone.</property>
           </packing>
         </child>
         <child>
-          <object class="GtkTextView" id="body_text">
+	  <object class="GtkScrolledWindow" id="body_scroller">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="has_focus">True</property>
-            <property name="wrap_mode">GTK_WRAP_WORD</property>
-            <property name="left_margin">4</property>
-            <property name="right_margin">4</property>
+            <property name="hscrollbar_policy">never</property>
+            <property name="vscrollbar_policy">never</property>
+            <child>
+              <object class="GtkTextView" id="body_text">
+		<property name="visible">True</property>
+		<property name="can_focus">True</property>
+		<property name="wrap_mode">GTK_WRAP_WORD</property>
+		<property name="left_margin">4</property>
+		<property name="right_margin">4</property>
+	      </object>
+	    </child>
           </object>
           <packing>
             <property name="position">1</property>
