@@ -1,3 +1,12 @@
+2009-04-29  Callum McKenzie  <callum@spooky-possum.org>
+
+	* stickynotes.ui:
+	* stickynotes_applet.c:
+	* stickynotes_applet.h:
+	* stickynotes.c:
+	* sticknotes.h: Patch from Dennis Hilmar to add scroll bars if the
+	note gets too large. (Bug: 121883)
+
 2009-04-06  Callum McKenzie  <callum@spooky-possum.org>
 
 	* stickynotes.glade: 
